--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,6 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@react-three/drei": "^9.80.3",
-    "@react-three/fiber": "^8.13.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,15 +12,14 @@
     "date-fns": "^2.30.0",
     "flubber": "^0.4.2",
     "framer-motion": "^10.12.16",
-    "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.155.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
